--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>jvm</module>
         <module>todo</module>
+        <module>spring</module>
     </modules>
 
     <parent>
