--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>spring</name>
     <!-- FIXME change it to the project's website -->
